# satellite_data_downloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: downloading_scratches.ipynb  ms_planetary_computer.ipynb
src/: api.py  app.py  config.py
src/api/: main.py  pipelines.py
src/api/schemas/: download_image.py  image_response.py  polygon_model.py  run_request.py
src/authorization/: auth.py
src/cli/: main.py
src/data_access/: README.md  query.py
src/data_access/base/: base.py  source.py
src/data_access/domain/: metadata.py  query.py
src/data_access/gee/: asset_downloader.py  gee_access.py  gee_image_info_service.py  gee_service.py  get_metadata.py  image_downloader.py  image_info_service.py  orchestrator.py
src/data_access/gee/utils/: convert_roi_to_gee.py  get_image_preview.py  roi_generator.py
src/db/: engine.py  session.py
src/domain/: image_request.py  metadata.py  polygon.py  query.py
src/domain/enums/: bands.py  collections.py  sentinel2_bands.py
src/models/: metadata.py
src/pipeline/: downloader_pipeline.py
src/processing/: raster_io.py
src/tools/: downloader.py  extract.py  file_handler.py  gee_utils.py  raster_ops.py
tests/: mock_downloader.py
